<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F7D4"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/question_card"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/question_card_design"
            android:elevation="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cpb_background_progressbar_color="@color/black"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="30"
                        app:cpb_progressbar_color="@color/white"
                        app:cpb_progressbar_width="3dp"
                        app:cpb_round_border="false" />

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/_00_00"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/next_button"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/question"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/question_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/first_question"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_below="@id/question"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/first_image" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_card"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/option_a_card"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:onClick="checkAisCorrect"
                    app:cardElevation="8dp">

                    <TextView
                        android:id="@+id/option_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/first_question_option_a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/option_b_card"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:onClick="checkBisCorrect">

                    <TextView
                        android:id="@+id/option_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/first_question_option_a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/option_c_card"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:onClick="checkCisCorrect">

                    <TextView
                        android:id="@+id/option_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/first_question_option_a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/option_d_card"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:onClick="checkDisCorrect">

                    <TextView
                        android:id="@+id/option_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/first_question_option_a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/nextBtn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/option_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/next_button_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/acme"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/next_button"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>